syntax = "proto3";

package auth;

import "common.proto";

service WalletTypeService {
  rpc Create(CreateRequest) returns (WalletType) {}
  rpc GetAll(PaginationRequest) returns (GetAllResponse) {}
  rpc Update(UpdateRequest) returns (SuccessResponse) {}
}

message CreateRequest {
  string name = 1;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
}

/// RESPONSE
message GetAllResponse {
  int32 totalCount = 1;
  repeated WalletType walletTypes = 2;
}

message WalletType {
  string id = 1;
  string name = 2;
}
